--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="C:\Users\tanishka sharma\Documents\Tanishka_Portfolio1\Tanishka_Portfolio\assets\pot image.jpeg" width="560" height="540" alt="Julia" class="w-100"
+            <img src="./assets/images/pot%20image.jpeg" width="560" height="540" alt="Julia" class="w-100"
               data-reveal="top">
 
-            <img src="C:\Users\tanishka sharma\Documents\Tanishka_Portfolio1\Tanishka_Portfolio\assets\pot image.jpeg" width="500" height="500" alt="250+ Projects Done" class="shape"
+            <img src="./assets/images/pot%20image.jpeg" width="500" height="500" alt="250+ Projects Done" class="shape"
               data-reveal="top" data-reveal-delay="0.25s">
           </figure>
 
